# nexora

./: .gitignore  BLUEPRINT.md  Cargo.toml  LICENSE  Makefile  README.md  install.bat  install.ps1  install.sh  quick-install.bat  setup.bat  setup.ps1
.github/: CODEOWNERS  CONTRIBUTING.md  FUNDING.yml  LICENSE  PULL_REQUEST_TEMPLATE.md  README.md  SECURITY.md  SUPPORT.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  package_request.md
.github/workflows/: ci.yml  publish-package.yml  release.yml  website.yml
ai-engine/: requirements.txt
ai-engine/nexora_ai/: __init__.py  cli.py  engine.py  models.py
cli/: Cargo.toml
cli/src/: main.rs
compiler/: Cargo.toml
compiler/src/: ast.rs  lexer.rs  lib.rs  parser.rs
crates/nexora-ai/src/: engine.rs  healer.py
crates/nexora-compiler/src/: typechecker.rs  (+1 more)
docs/: ARCHITECTURE.md  api-reference.md  arrays.md  changelog.md  classes.md  cli-reference.md  error-handling.md  examples.md  faq.md  functions.md  generics.md  getting-started.md  index.md  migration.md  modules.md  objects.md  package-manager.md  pattern-matching.md  standard-library.md  string-interpolation.md  syntax.md  variables.md  web-development.md
examples/: 01-hello-world.nx  02-variables.nx  03-operators.nx  04-control-flow.nx  05-functions.nx  06-arrays-objects.nx  07-classes.nx  08-error-handling.nx  09-modules.nx  10-async.nx  arrays.nx  functions.nx  hello.nx  loops.nx  test_assert.nx  test_async.nx  test_class.nx  test_class_interp.nx  test_closure.nx  test_closure2.nx  test_empty_lambda.nx  test_extends.nx  test_flatten.nx  test_hof.nx  test_inherit.nx  test_inherit2.nx  test_interp.nx  test_match.nx  test_match2.nx  test_match3.nx  test_match4.nx  test_obj.nx  test_reduce.nx  test_result.nx  test_simple.nx  test_stdlib.nx  test_try.nx  test_type.nx  v02_showcase.nx  v03_showcase.nx  (+8 more)
extensions/emacs/: README.md  nexora-mode.el
extensions/jetbrains/: README.md  build.gradle.kts
extensions/notepad-plus-plus/: README.md  nexora.xml
extensions/sublime-text/: Nexora.sublime-syntax  Nexora.tmLanguage  README.md
extensions/vim/: README.md
extensions/zed/: README.md  extension.toml
formatter/: Cargo.toml
formatter/src/: main.rs
language-server/: Cargo.toml
language-server/src/: completion.rs  diagnostics.rs  document.rs  goto.rs  handler.rs  hover.rs  main.rs  references.rs  rename.rs  server.rs  signature.rs  symbols.rs
lib/: collection.nx  math.nx  string.nx
linter/: Cargo.toml
linter/src/: main.rs
nxm/: .gitignore  Cargo.toml  index.nx  nexora.json  test.nx
nxm/src/: config.rs  main.rs  package.rs  registry.rs  resolver.rs
nxm/src/commands/: help.rs  init.rs  install.rs  list.rs  mod.rs  modules.rs  publish.rs  remove.rs  run.rs  search.rs  test.rs  update.rs
opennexora/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  members.json  projects.json
opennexora/blog/: README.md  announcing-v0.4.md
package-manager/: Cargo.toml
package-manager/src/: main.rs
registry/: Dockerfile  README.md  config.json  docker-compose.yml  server.js  server.nx
registry/routes/: auth.nx  packages.nx
runtime/: Cargo.toml
runtime/src/: interpreter.rs  lib.rs  value.rs
src/: ast.rs  compiler.rs  error.rs  interpreter.rs  lexer.rs  lib.rs  main.rs  parser.rs  repl.rs  value.rs
stdlib/: fs.nx  http.nx  testing.nx
tests/: language_tests.rs  run_tests.bat
tools/fmt/: Cargo.toml
tools/lint/: Cargo.toml
tools/lint/src/: linter.rs  main.rs
tools/lint/src/rules/: best_practices.rs  errors.rs  mod.rs  style.rs
vscode-extension/: README.md  language-configuration.json  package.json
vscode-extension/icons/: icon-theme.json
vscode-extension/snippets/: nexora.json
vscode-extension/syntaxes/: nexora.tmLanguage.json
website/: docs.html  index.html  install.ps1  packages.html  playground.html  script.js  style.css
(+20 files in other folders)
