[package]
name = "nexora"
version = "0.1.0"
edition = "2021"
authors = ["Nexora Team"]
description = "Nexora - A simple, clean programming language"

[[bin]]
name = "nexora"
path = "src/main.rs"

[dependencies]
rustyline = "10.0"
reqwest = { version = "0.11", features = ["blocking"] }
serde_json = "1.0"
rand = "0.8"
