[package]
name = "nexora-cli"
version = "0.1.0"
edition = "2021"
authors = ["Nexora Team"]
description = "Nexora CLI - Command line interface for the Nexora programming language"
license = "MIT"

[[bin]]
name = "nx"
path = "src/main.rs"

[dependencies]
nexora-compiler = { path = "../compiler" }
nexora-runtime = { path = "../runtime" }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
rustyline = "10.0"
serde_json = "1.0"
dirs = "4.0"
