[package]
name = "nexora-lsp"
version = "0.1.0"
edition = "2021"
description = "Nexora Language Server Protocol implementation"
license = "MIT"

[[bin]]
name = "nexora-lsp"
path = "src/main.rs"

[dependencies]
lsp-server = "0.7"
lsp-types = "0.94"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
crossbeam = "0.8"
