[package]
name = "nxlint"
version = "0.1.0"
edition = "2021"
authors = ["Nexora Team"]
description = "Nexora Code Linter"
license = "MIT"

[[bin]]
name = "nxlint"
path = "src/main.rs"

[dependencies]
nexora-compiler = { path = "../compiler" }
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
