[package]
name = "nxm"
version = "1.0.0"
edition = "2021"
description = "Nexora Package Manager"
license = "MIT"
authors = ["Nexora Team"]
readme = "README.md"

[[bin]]
name = "nxm"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
dirs = "5.0"
colored = "2.0"
zip = "0.6"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "1.0"