[package]
name = "npxr"
version = "0.1.0"
edition = "2021"
authors = ["Nexora Team"]
description = "Nexora Package Manager"
license = "MIT"

[[bin]]
name = "npxr"
path = "src/main.rs"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
colored = "2.0"
reqwest = { version = "0.11", features = ["json", "blocking"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.5"
dirs = "4.0"
zip = "0.6"
