[package]
name = "nexora-lint"
version = "0.1.0"
edition = "2021"
description = "Linter for Nexora (.nx) files"

[[bin]]
name = "nexora-lint"
path = "src/main.rs"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
walkdir = "2.4"
anyhow = "1.0"
colored = "2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
